--- a/WinkelAppProject/src/view/ProductenOverzicht.form
+++ b/WinkelAppProject/src/view/ProductenOverzicht.form
@@ -11,7 +11,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-21,0,0,5,91"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,65,0,0,5,91"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -200,13 +200,15 @@
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               <Component id="jbProductVerwijderen" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jbProductWijzigen2" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="jbProductWijzigen" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jbProductWijzigen1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jbProductToevoegen" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jScrollPane1" alignment="1" pref="580" max="32767" attributes="0"/>
+                          <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -230,6 +232,7 @@
                           <Component id="jbProductWijzigen" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                           <Component id="jbProductVerwijderen" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                           <Component id="jbProductWijzigen1" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                          <Component id="jbProductWijzigen2" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="42" max="32767" attributes="0"/>
                   </Group>
@@ -270,7 +273,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Calibri" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Voeg een product toe"/>
+                <Property name="text" type="java.lang.String" value="Nieuw product"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbProductToevoegenActionPerformed"/>
@@ -278,7 +281,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="jbProductWijzigen">
               <Properties>
-                <Property name="label" type="java.lang.String" value="Product retourneren"/>
+                <Property name="text" type="java.lang.String" value="Product retourner."/>
               </Properties>
               <AccessibilityProperties>
                 <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Product retourneren"/>
@@ -314,8 +317,16 @@
             </Component>
             <Component class="javax.swing.JButton" name="jbProductWijzigen1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Wijzig een product"/>
+                <Property name="text" type="java.lang.String" value="Wijzig product"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbProductWijzigen2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Voorraad retourner."/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="voorraadRetourneren"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
