--- a/WinkelAppProject/src/view/Rapporten.form
+++ b/WinkelAppProject/src/view/Rapporten.form
@@ -462,7 +462,7 @@
                                   <Component id="jComboBox2" min="-2" pref="200" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Component id="jpLeeftijdGrafiek" min="-2" max="-2" attributes="0"/>
+                          <Component id="jpLeeftijdGrafiek" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="19" max="32767" attributes="0"/>
                   </Group>
@@ -479,9 +479,9 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                       <Component id="jpLeeftijdGrafiek" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="327" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="277" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
