--- a/WinkelAppProject/src/view/ProductenOverzicht.form
+++ b/WinkelAppProject/src/view/ProductenOverzicht.form
@@ -507,6 +507,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbProductVerwijderenMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbProductVerwijderenActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jbProductWijzigen1">
