--- a/WinkelAppProject/src/view/Voorraad.form
+++ b/WinkelAppProject/src/view/Voorraad.form
@@ -65,6 +65,8 @@
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="jbBestelVoorraad" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="jbWijzigVoorraad" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -84,7 +86,10 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="253" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jbWijzigVoorraad" min="-2" pref="39" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jbWijzigVoorraad" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                          <Component id="jbBestelVoorraad" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace min="0" pref="23" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -138,6 +143,14 @@
                   </StringArray>
                 </Property>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbBestelVoorraad">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Voorraad Bestellen"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBestelVoorraadActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
