Klant wijzigen verbeterd
nu is het adres straatnaam en huisnummer in klantenoverzicht, alleen de
straatnaam is niet handig

--- a/WinkelAppProject/src/view/GebruikerOverzicht.form
+++ b/WinkelAppProject/src/view/GebruikerOverzicht.form
@@ -74,13 +74,13 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="-41" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace pref="442" max="32767" attributes="0"/>
+                          <EmptySpace pref="468" max="32767" attributes="0"/>
                           <Component id="jcKlantenZoekOpties" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="180" max="32767" attributes="0"/>
+                          <EmptySpace pref="154" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
